test/error/sema/invalid-return-type.dsk
func f(x: int) -> int
    return true
end
